<resources>
    <string name="app_name">Clean Water Reporting</string>
    <string name="graph">GRAPH</string>
    <string name="Cancel">Cancel</string>
    <string name="Return">RETURN</string>
    <string name="Log_In">Log In</string>
    <string name="Register">Register</string>
    <string name="Welcome_to_Clean_Water_Report">Welcome to Clean Water Report</string>
    <string name="Reenter_email">Reenter Email</string>
    <string name="Enter_new_password">Enter new password</string>
    <string name="Select_new_Credentials">Select new Credentials:</string>
    <string name="User">User</string>
    <string name="Worker">Worker</string>
    <string name="Manager">Manager</string>
    <string name="Admin">Admin</string>
    <string name="Edit">EDIT</string>
    <string name="Latitude">Latitude:</string>
    <string name="Longitude">Longitude:</string>
    <string name="Start_Year">Start Year:</string>
    <string name="End_Year">End Year:</string>
    <string name="Degrees">+/- Degrees:</string>
    <string name="Email">Email:</string>
    <string name="Enter_email">Enter email</string>
    <string name="Password">Password:</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Login">LOGIN</string>
    <string name="Not_registered">Not Registered? Register Here:</string>
    <string name="REGISTER_NEW_USER">REGISTER NEW USER</string>
    <string name="Enter_email_address">Enter email address:</string>
    <string name="Enter_password">Enter password:</string>
    <string name="Select_Credentials">Select Credentials:</string>
    <string name="ADD">ADD</string>
    <string name="Report_ID">Report ID#:</string>
    <string name="User_text">User: </string>
    <string name="Date_Time">Date/Time: </string>
    <string name="Water_Source">Water Source: </string>
    <string name="Water_Condition">Water Condition: </string>
    <string name="Location">Location:</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="Location_enter">Location (Enter Coordinates):</string>
    <string name="Viral_PPM">Viral PPM:</string>
    <string name="Contaminant_PPM">Contaminant PPM:</string>
    <string name="account_exists">This account already exists. Confirm password for account:</string>
    <string name="email_email_com">email@email.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="Edit_User">Edit User</string>
    <string name="SUBMIT_REPORT">SUBMIT REPORT</string>
    <string name="SHOW_REPORTS">SHOW REPORTS</string>
    <string name="Submit_Purity">SUBMIT PURITY</string>
    <string name="Purity_Reports">PURITY REPORTS</string>
    <string name="android_guy"> </string>
</resources>