<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewEmail"
        android:text="@string/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Enter_email"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:id="@+id/textViewPass"
        android:text="@string/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/Enter_Password"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:text="@string/Login"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"

        android:id="@+id/login_button"/>

    <Button
        android:id="@+id/cancel_button"
        android:text="@string/Cancel"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="16dp"/>

    <TextView
        android:text="@string/Not_registered"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRegisterNotice" />

    <Button
        android:text="@string/REGISTER_NEW_USER"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/register_button"/>

</LinearLayout>