<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs2340gt.nick.app_android.controller.WaterReportSubmitActivity"
    android:gravity="center_vertical|center_horizontal">

    <Button
        android:id="@+id/buttonCancelReport"
        android:text="@string/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/labelTextId"
        android:text="@string/Report_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/displayTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/labelTextId"/>

    <TextView
        android:id="@+id/labelTextUser"
        android:text="@string/User_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelTextId"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/displayTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/labelTextUser"
        android:layout_toEndOf="@+id/labelTextUser"/>

    <TextView
        android:id="@+id/labelTextDateTime"
        android:text="@string/Date_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelTextUser"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/displayTextDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/labelTextDateTime"
        android:layout_toEndOf="@+id/displayTextId"/>

    <Spinner
        android:id="@+id/spinnerSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/labelSpinnerSource"
        android:text="@string/Water_Source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinnerSource"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/conditionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Water_Condition"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:id="@+id/conditionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conditionText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/labelTextLocation"
        android:text="@string/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/latInput"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonEditReport"
        android:text="@string/Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/latInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="numberSigned|numberDecimal"
        android:hint="@string/Latitude"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/displayTextDateTime"
        android:layout_alignStart="@+id/displayTextDateTime" />

    <EditText
        android:id="@+id/longInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="numberSigned|numberDecimal"
        android:hint="@string/Longitude"
        android:layout_below="@+id/latInput"
        android:layout_alignStart="@+id/latInput" />

</RelativeLayout>
