<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/startYearInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="5"
        android:inputType="number"
        android:layout_marginStart="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/endYearInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="number"
        android:layout_alignBaseline="@+id/startYearInput"
        android:layout_alignBottom="@+id/startYearInput"
        android:layout_toEndOf="@+id/startYearInput"
        android:layout_marginStart="58dp" />

    <TextView
        android:id="@+id/textStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/endText"
        android:layout_alignBottom="@+id/endText"
        android:layout_alignStart="@+id/startYearInput"
        android:labelFor="@id/startYearInput"
        android:text="@string/Start_Year" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/endYearInput"
        android:layout_alignStart="@+id/endYearInput"
        android:labelFor="@id/endYearInput"
        android:text="@string/End_Year" />

    <EditText
        android:id="@+id/latInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:ems="5"
        android:gravity="center_horizontal"
        android:inputType="number|numberSigned|numberDecimal"
        android:layout_below="@+id/startYearInput"
        android:layout_alignEnd="@+id/textStart" />

    <EditText
        android:id="@+id/longInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:gravity="center_horizontal"
        android:inputType="number|numberSigned|numberDecimal"
        android:layout_above="@+id/graph"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/latText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Latitude"
        android:layout_above="@+id/longInput"
        android:layout_alignStart="@+id/latInput"
        android:labelFor="@id/latInput"/>

    <TextView
        android:id="@+id/longText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Longitude"
        android:layout_above="@+id/longInput"
        android:layout_alignStart="@+id/longInput"
        android:labelFor="@id/longInput"/>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/latInput"
        android:visibility="visible" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@android:string/search_go"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/varianceSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/graph"
        android:layout_alignStart="@+id/searchButton" />

    <TextView
        android:id="@+id/varianceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/varianceSpinner"
        android:layout_alignTop="@+id/longText"
        android:text="@string/Degrees" />

</RelativeLayout>